--- a/cliente/package.json
+++ b/cliente/package.json
@@ -19,6 +19,7 @@
     "vue-katex": "^0.4.0",
     "vue-router": "^3.1.6",
     "vue-sidebar-menu": "^4.5.3",
+    "vuetify": "^2.2.32",
     "vuex": "^3.3.0"
   },
   "devDependencies": {
@@ -28,7 +29,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
